--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96a0d5">  <td>20/03/04 10:06:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestFrame.beforeclass()[pri:0, instance:com.Amazon.TestFrame@bef2d72]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@204715855</td>   <td></td> </tr>
-<tr bgcolor="a17273">  <td>20/03/04 10:06:33</td>   <td>10049</td> <td title="&lt;&lt;BrowserFunction.closeBrowser()[pri:0, instance:com.Amazon.TestFrame@bef2d72]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@204715855</td>   <td></td> </tr>
-<tr bgcolor="96a0d5">  <td>20/03/04 10:06:23</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFrame.firstTestFirst()[pri:0, instance:com.Amazon.TestFrame@bef2d72]">firstTestFirst</td> 
-  <td>main@204715855</td>   <td></td> </tr>
-<tr bgcolor="a17273">  <td>20/03/04 10:06:33</td>   <td>9838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TestFrame@bef2d72]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@204715855</td>   <td></td> </tr>
-<tr bgcolor="a17273">  <td>20/03/04 10:06:13</td>   <td>-9508</td> <td title="&gt;&gt;BrowserFunction.initialioseBrowser()[pri:0, instance:com.Amazon.TestFrame@bef2d72]">&gt;&gt;initialioseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@204715855</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/03/09 08:37:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_1()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">Step_1</td> 
+  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/03/09 08:37:53</td>   <td>11908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_2()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">Step_2</td> 
+  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/03/09 08:38:15</td>   <td>33738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_3()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">Step_3</td> 
+  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:38:15</td>   <td>33834</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.afterClass()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:37:41</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeMethod()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:37:53</td>   <td>11908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeMethod()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:38:15</td>   <td>33732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeMethod()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:37:41</td>   <td>-301</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:38:15</td>   <td>33942</td> <td title="&lt;&lt;BrowserFunction.closeBrowser()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:37:48</td>   <td>6414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:38:14</td>   <td>33047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:38:15</td>   <td>33823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/03/09 08:37:36</td>   <td>-5489</td> <td title="&gt;&gt;BrowserFunction.initialioseBrowser()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;initialioseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
 </table>
