--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,36 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:17:45</td>   <td>0</td> <td title="&gt;&gt;BrowserFunction.initialioseBrowser()[pri:0, instance:com.Amazon.SecondTestClass@76908cc0]">&gt;&gt;initialioseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:17:56</td>   <td>10842</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Amazon.SecondTestClass@76908cc0]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="96a0d5">  <td>20/03/04 23:17:56</td>   <td>10909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTestClass.SecondTest()[pri:0, instance:com.Amazon.SecondTestClass@76908cc0]">SecondTest</td> 
-  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:18:54</td>   <td>68581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.SecondTestClass@76908cc0]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="96a0d5">  <td>20/03/04 23:18:54</td>   <td>68743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTestClass.SecondTestFirst()[pri:0, instance:com.Amazon.SecondTestClass@76908cc0]">SecondTestFirst</td> 
-  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:19:01</td>   <td>75340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.SecondTestClass@76908cc0]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="96a0d5">  <td>20/03/04 23:19:01</td>   <td>75343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTestClass.SecondTestSecond()[pri:0, instance:com.Amazon.SecondTestClass@76908cc0]">SecondTestSecond</td> 
-  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:19:01</td>   <td>75355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.SecondTestClass@76908cc0]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:19:01</td>   <td>75366</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Amazon.FirstTestClass@2473d930]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="beb86c">  <td>20/03/04 23:19:01</td>   <td>75368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestClass.firstTestFirst()[pri:0, instance:com.Amazon.FirstTestClass@2473d930]">firstTestFirst</td> 
-  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:19:08</td>   <td>82478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.FirstTestClass@2473d930]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="beb86c">  <td>20/03/04 23:19:08</td>   <td>82483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestClass.firstTestSecond()[pri:0, instance:com.Amazon.FirstTestClass@2473d930]">firstTestSecond</td> 
-  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:19:25</td>   <td>99043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.FirstTestClass@2473d930]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="beb86c">  <td>20/03/04 23:19:25</td>   <td>99045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestClass.firstTestThird()[pri:0, instance:com.Amazon.FirstTestClass@2473d930]">firstTestThird</td> 
-  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:19:29</td>   <td>103889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.FirstTestClass@2473d930]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
-<tr bgcolor="767df8">  <td>20/03/04 23:19:30</td>   <td>104205</td> <td title="&lt;&lt;BrowserFunction.closeBrowser()[pri:0, instance:com.Amazon.SecondTestClass@76908cc0]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:39:41</td>   <td>0</td> <td title="&gt;&gt;BrowserFunction.initialioseBrowser()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&gt;&gt;initialioseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:39:47</td>   <td>5513</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/03/09 08:39:47</td>   <td>5562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_1()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_1</td> 
+  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:39:55</td>   <td>13399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/03/09 08:39:59</td>   <td>17256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_2()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_2</td> 
+  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:39:59</td>   <td>17262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/03/09 08:40:00</td>   <td>18563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_3()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_3</td> 
+  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:06</td>   <td>25139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/03/09 08:40:07</td>   <td>26007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_4()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_4</td> 
+  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:07</td>   <td>26022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/03/09 08:40:08</td>   <td>26822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_5()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_5</td> 
+  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:08</td>   <td>26828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:09</td>   <td>27712</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.afterClass()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:09</td>   <td>28130</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="c6f1ae">  <td>20/03/09 08:40:09</td>   <td>28138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_1()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">Step_1</td> 
+  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:13</td>   <td>32001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="c6f1ae">  <td>20/03/09 08:40:14</td>   <td>33025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_2()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">Step_2</td> 
+  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:28</td>   <td>46934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="c6f1ae">  <td>20/03/09 08:40:29</td>   <td>47718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_3()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">Step_3</td> 
+  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:33</td>   <td>51848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:34</td>   <td>52672</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.afterClass()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>20/03/09 08:40:34</td>   <td>53029</td> <td title="&lt;&lt;BrowserFunction.closeBrowser()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
 </table>
