Full Page Screenshot at every step

--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,48 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="998b7c">  <td>20/03/09 08:39:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_1()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_1</td> 
-  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="c6f1ae">  <td>20/03/09 08:40:09</td>   <td>22576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_1()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">Step_1</td> 
-  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>20/03/09 08:39:59</td>   <td>11694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_2()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_2</td> 
-  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="c6f1ae">  <td>20/03/09 08:40:14</td>   <td>27463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_2()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">Step_2</td> 
-  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>20/03/09 08:40:00</td>   <td>13001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_3()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_3</td> 
-  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="c6f1ae">  <td>20/03/09 08:40:29</td>   <td>42156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_3()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">Step_3</td> 
-  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>20/03/09 08:40:07</td>   <td>20445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_4()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_4</td> 
-  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>20/03/09 08:40:08</td>   <td>21260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_5()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">Step_5</td> 
-  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:09</td>   <td>22150</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.afterClass()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:34</td>   <td>47110</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.afterClass()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:39:47</td>   <td>-49</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:09</td>   <td>22568</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:34</td>   <td>47467</td> <td title="&lt;&lt;BrowserFunction.closeBrowser()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:39:55</td>   <td>7837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:39:59</td>   <td>11700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:06</td>   <td>19577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:07</td>   <td>20460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:08</td>   <td>21266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:13</td>   <td>26439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:28</td>   <td>41372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:40:33</td>   <td>46286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7a187f14]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/03/09 08:39:41</td>   <td>-5562</td> <td title="&gt;&gt;BrowserFunction.initialioseBrowser()[pri:0, instance:com.Amazon.TC3o5o1@307f6b8c]">&gt;&gt;initialioseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1226622409</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/03/09 12:59:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_1()[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">Step_1</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="92be91">  <td>20/03/09 13:00:36</td>   <td>52916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_1()[pri:0, instance:com.Tests.TC3o4o14@51e2adc7]">Step_1</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/03/09 13:00:02</td>   <td>18812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_2()[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">Step_2</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="92be91">  <td>20/03/09 13:00:49</td>   <td>65943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_2()[pri:0, instance:com.Tests.TC3o4o14@51e2adc7]">Step_2</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/03/09 13:00:09</td>   <td>26224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_3()[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">Step_3</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="92be91">  <td>20/03/09 13:01:09</td>   <td>86547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_3()[pri:0, instance:com.Tests.TC3o4o14@51e2adc7]">Step_3</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/03/09 13:00:23</td>   <td>39719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_4()[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">Step_4</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/03/09 13:00:29</td>   <td>46203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o5o1.Step_5()[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">Step_5</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:00:36</td>   <td>52608</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.afterClass()[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:01:20</td>   <td>97209</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.afterClass()[pri:0, instance:com.Tests.TC3o4o14@51e2adc7]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 12:59:43</td>   <td>-42</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:00:36</td>   <td>52914</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Tests.TC3o4o14@51e2adc7]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:01:20</td>   <td>97392</td> <td title="&lt;&lt;BrowserFunction.closeBrowser()[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 12:59:51</td>   <td>8061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:00:02</td>   <td>18820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:00:16</td>   <td>32773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:00:23</td>   <td>39731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:00:29</td>   <td>46213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:00:39</td>   <td>56407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o4o14@51e2adc7]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:01:02</td>   <td>79401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o4o14@51e2adc7]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 13:01:14</td>   <td>90701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o4o14@51e2adc7]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="beadca">  <td>20/03/09 12:59:38</td>   <td>-4712</td> <td title="&gt;&gt;BrowserFunction.initialioseBrowser()[pri:0, instance:com.Tests.TC3o5o1@6f195bc3]">&gt;&gt;initialioseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
 </table>
