--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,30 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:37:36</td>   <td>0</td> <td title="&gt;&gt;BrowserFunction.initialioseBrowser()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;initialioseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:37:41</td>   <td>5188</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:37:41</td>   <td>5486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeMethod()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>20/03/09 08:37:41</td>   <td>5489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_1()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">Step_1</td> 
-  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:37:48</td>   <td>11903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:37:53</td>   <td>17397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeMethod()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>20/03/09 08:37:53</td>   <td>17397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_2()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">Step_2</td> 
-  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:38:14</td>   <td>38536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:38:15</td>   <td>39221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeMethod()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>20/03/09 08:38:15</td>   <td>39227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_3()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">Step_3</td> 
-  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:38:15</td>   <td>39312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:38:15</td>   <td>39323</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.afterClass()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/03/09 08:38:15</td>   <td>39431</td> <td title="&lt;&lt;BrowserFunction.closeBrowser()[pri:0, instance:com.Amazon.TC3o4o14@7e2d773b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292917034</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/09 12:54:41</td>   <td>0</td> <td title="&gt;&gt;BrowserFunction.initialioseBrowser()[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">&gt;&gt;initialioseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/09 12:54:46</td>   <td>4774</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserFunction.beforeclass()[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/03/09 12:54:46</td>   <td>4825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_1()[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">Step_1</td> 
+  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/09 12:54:51</td>   <td>10353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/03/09 12:55:05</td>   <td>23641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_2()[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">Step_2</td> 
+  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/09 12:55:18</td>   <td>37477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/03/09 12:55:26</td>   <td>44962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3o4o14.Step_3()[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">Step_3</td> 
+  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/09 12:55:27</td>   <td>46074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.getResult(org.testng.ITestResult)[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/09 12:55:34</td>   <td>52790</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserFunction.afterClass()[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/09 12:55:34</td>   <td>53170</td> <td title="&lt;&lt;BrowserFunction.closeBrowser()[pri:0, instance:com.Tests.TC3o4o14@2173f6d9]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
 </table>
