--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.Amazon.TC3o4o14</td>
+<td>com.Tests.TC3o5o1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,6 +12,14 @@
 <tr>
 <td>&nbsp;</td>
 <td>Step_3</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Step_4</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Step_5</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -46,7 +54,7 @@
 <td>afterClass</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>com.Amazon.TC3o5o1</td>
+<td>com.Tests.TC3o4o14</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -54,14 +62,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>Step_3</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Step_4</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Step_5</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
